:fire: removed api token validation
