# src/referentielijsten/api/filterset.py
@@ -1,5 +1,3 @@
-from django.db.models import Q
-from django.utils import timezone
 from django.utils.translation import gettext_lazy as _
 
 from django_filters.rest_framework import FilterSet, filters
@@ -8,6 +6,10 @@ from .models import Item, Tabel
 
 
 class TabelFilterset(FilterSet):
+    code = filters.CharFilter(
+        help_text=_("De waarde van de `code` van een specifieke `tabel`.")
+    )
+
     is_geldig = filters.BooleanFilter(
         help_text=_("Of de `einddatum_geldigheid` niet in het verleden ligt."),
         method="filter_is_geldig",
@@ -19,11 +21,8 @@ class TabelFilterset(FilterSet):
 
     def filter_is_geldig(self, queryset, name, value):
         if value:
-            return queryset.filter(
-                Q(einddatum_geldigheid__isnull=True)
-                | Q(einddatum_geldigheid__gt=timezone.now())
-            )
-        return queryset.filter(einddatum_geldigheid__lt=timezone.now())
+            return queryset.geldig()
+        return queryset.ongeldig()
 
 
 class ItemFilterset(FilterSet):
@@ -35,7 +34,10 @@ class ItemFilterset(FilterSet):
         method="filter_is_geldig",
     )
     tabel__code = filters.CharFilter(
-        help_text=_("De naam van de `tabel__code` gelinkt aan de items: VERPLICHT")
+        help_text=_(
+            "De waarde van de `tabel__code` die gelinkt is aan de items: VERPLICHT"
+        ),
+        required=True,
     )
 
     class Meta:
@@ -44,22 +46,5 @@ class ItemFilterset(FilterSet):
 
     def filter_is_geldig(self, queryset, name, value):
         if value:
-            return queryset.filter(
-                (
-                    Q(begindatum_geldigheid__isnull=True)
-                    | Q(begindatum_geldigheid__lte=timezone.now())
-                )
-                & (
-                    Q(einddatum_geldigheid__isnull=True)
-                    | Q(einddatum_geldigheid__gt=timezone.now())
-                )
-            )
-
-        return queryset.filter(
-            (
-                Q(einddatum_geldigheid__lt=timezone.now())
-                & Q(begindatum_geldigheid__gt=timezone.now())
-            )
-            | Q(einddatum_geldigheid__lt=timezone.now())
-            | Q(begindatum_geldigheid__gt=timezone.now())
-        )
+            return queryset.geldig()
+        return queryset.ongeldig()
